contour/manifests/keycloak.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: keycloak.127-0-0-101.nip.io
    tls:
      secretName: ingress
  routes:
    - services:
        - name: keycloak
          port: 8080
      # Allow also HTTP to make REST API use easier for dev use
      permitInsecure: true
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.0
          command:
            - /bin/bash
            - -cxe
            - |
              /opt/keycloak/bin/kc.sh import --file /config/keycloak-realm.json
              /opt/keycloak/bin/kc.sh start
          volumeMounts:
            - name: keycloak-config
              mountPath: /config
      volumes:
        - name: keycloak-config
          configMap:
            name: keycloak-config
